# Ergo-Protocol

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
client/: check-admin.js  check-contracts.js  check-old-contracts.js  deploy-and-setup.js  inspect-wasm.py  inspect_images.py  mint_testnet_ergo.js  next.config.mjs  package.json  parse-wasm.py  restore-contract.js  strip-target-features.py  tailwind.config.ts  test-init.js  test-sac.js  tsconfig.tsbuildinfo  verify-liquidity.js
client/app/: globals.css  layout.tsx  page.tsx
client/components/: Badge.tsx  Button.tsx  Card.tsx  HealthFactorIndicator.tsx  IRMChart.tsx  StellarWalletModal.tsx  TransactionOverview.tsx  index.ts
client/lib/: config.ts  index.ts  markets.ts  oracle.ts  positions.ts  rpc.ts  stellar-wallet.tsx  stellar.ts  store.ts  transactions.ts  wallets.ts
client/styles/: tokens.css
contracts/backstop/: Cargo.toml
contracts/compliance/: Cargo.toml
contracts/core-pool/: Cargo.toml
contracts/ergo-token/: Cargo.toml
docs/: index.md
keepers/: package.json
scripts/: .env.example  crop_logos.py  deploy-devnet.ts  deploy-mainnet.js  deploy-mainnet.ts  make_logo_circular.py  mock-setup.ts  optimize_wasm.py  seed-liquidity.ts  verify-liquidity.ts
server/: package-lock.json  package.json  tsconfig.json
server/src/: index.ts
shared/: Cargo.toml
tests/integration/: Cargo.toml  full_flow_test.rs  isolation_invariant_test.rs
tests/integration/src/: lib.rs
(+125 files in other folders)
