[workspace]
resolver = "2"
members = [
    "contracts/core-pool",
    "contracts/oracle-aggregator",
    "contracts/backstop",
    "contracts/liquidation-engine",
    "contracts/governance",
    "contracts/compliance",
    "contracts/ergo-token",
    "contracts/testnet-mock-assets",
    "shared",
]

[workspace.package]
edition = "2021"

[profile.release]
opt-level = "z"
overflow-checks = true
lto = true
codegen-units = 1
panic = "abort"

